fix: QDatetimeRange vertical alignment if one field is empty and one is not

--- a/src/components/datetime/datetime.mat.styl
+++ b/src/components/datetime/datetime.mat.styl
@@ -166,10 +166,12 @@ for $pos in 0..12
     top (((1 + sin($degree * 1deg)) * 100%) / 2)
     left (((1 + cos($degree * 1deg)) * 100%) / 2)
 
-.q-datetime-range.full-width
+.q-datetime-range
     display flex
     > div
-      flex 1 1 auto
+      flex 0 1 auto
+    &.full-width > div
+      flex-grow 1
     > div + div
       margin-left $datetime-range-space
 
